# smtt-composition

./: .editorconfig  .ghci  .gitignore  .gitlab-ci.yml  .stylish-haskell.yaml  HLint.hs  LICENSE  Makefile  README.md  Setup.hs  package.yaml  satt-composition.benchmark.1.txt  satt-composition.benchmark.txt  satt-composition.cabal  smtt-composition.benchmark.txt  stack-nightly.yaml  stack.yaml
app/: Main.hs
benchmark/: Common.hs  CriterionFusionMain.hs  WeighFusionMain.hs
benchmark/fusion/: Fusion.hs  PostfixOpParser.hs  Stack.hs
benchmark/fusion/Control/: Bench.hs
benchmark/fusion/Data/: Stack.hs
benchmark/fusion/Samples/: Instances.hs  PostfixOpParser.hs
benchmark/lib/: Fusion.hs
benchmark/lib/Control/: Bench.hs
benchmark/lib/Data/: Stack.hs
benchmark/lib/Samples/: Fusions.hs  Instances.hs  PostfixOpParser.hs  TermOpParser.hs
satt-prelude/: Setup.hs  package.yaml
satt-prelude/src/: OrphanInstances.hs  SattPrelude.hs
satt-prelude/test/: Lint.hs
smtt-prelude/: package.yaml
smtt-prelude/src/: OrphanInstances.hs  SmttPrelude.hs
src/Control/: CoercionExt.hs  Universe.hs
src/Data/: TFFoldable.hs
src/Data/Bifunctor/: FixLR.hs
src/Data/Pattern/: Error.hs
src/Data/SATT/: ATT.hs  Demo.hs  SATT.hs  Tree.hs
src/Data/SATT/ATT/: Compose.hs
src/Data/SATT/SATT/: Compose.hs
src/Data/Tree/: RankedTree.hs  Transducer.hs
src/Data/Tree/RankedTree/: Builder.hs  Instances.hs  Label.hs  Transducer.hs  Zipper.hs
src/Data/Tree/Trans/: ATT.hs  Class.hs  Demo.hs  MAC.hs  SATT.hs  SMAC.hs  Stack.hs  TOP.hs
src/Data/Tree/Trans/ATT/: Compose.hs  Instances.hs
src/Data/Tree/Trans/Compose/: Desc.hs  ExtendDesc.hs  ExtendVoigt2004.hs  TdttAndSmtt.hs
src/Data/Tree/Trans/Decompose/: MttToAtt.hs  SmttToSatt.hs
src/Data/Tree/Trans/MAC/: Instances.hs
src/Data/Tree/Trans/SATT/: Compose.hs  Instances.hs
src/Data/Tree/Trans/SMAC/: Instances.hs
src/Data/Tree/Trans/TOP/: Instances.hs
src/Data/Tree/Transducer/: ATT.hs  Demo.hs
src/Data/Tree/Transducer/ATT/: Instances.hs
src/Data/TypeLevel/: TaggedEither.hs
src/Data/Universe/: Instances.hs
src/Language/Haskell/: Encoding.hs
src/Language/Haskell/Tree/Trans/: MAC.hs  SMAC.hs
src/Text/PrettyPrint/: Classy.hs
test/: Doctest.hs  Hlint.hs  Lint.hs
test/Data/Tree/RankedTree/: ZipperSpec.hs
test/specs/Data/Tree/RankedTree/: ZipperSpec.hs
test/specs/TreeTrans/Compose/: ExtendVoigt04Spec.hs
