name:                satt-composition
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://gitlab.com/mizunashi-mana/satt-composition#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Tree
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Control.CoercionExt
                       Data.TFFoldable
                       Data.Tree.RankedTree
                       Data.Tree.Transducer
                       Data.SATT.ATT
  build-depends:       base >= 4.7 && < 5
                     , unordered-containers
                     , hashable
  default-language:    Haskell2010

executable satt-composition-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , satt-composition
  default-language:    Haskell2010

test-suite satt-composition-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , satt-composition
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/satt-composition
