name:                satt-composition
version:             0.1.0.0
synopsis:            Implementation of SATT Composition
description:         SATT Composition implementation
homepage:            https://gitlab.com/mizunashi-mana/satt-composition#readme
license:             MIT
license-file:        LICENSE
author:              Mizunashi Mana
maintainer:          mizunashi-mana@noreply.git
copyright:           2017 Mizunashi Mana
category:            Tree
build-type:          Custom
extra-source-files:  README.md
cabal-version:       >=1.24

custom-setup
  setup-depends:
    base,
    Cabal,
    cabal-doctest

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:
    Control.CoercionExt
    Data.Tree.RankedTree
    Data.Tree.RankedTree.Zipper
    Data.Tree.Transducer
    Data.SATT.ATT
  build-depends:
    base >= 4.7 && < 5,
    classy-prelude,
    unordered-containers,
    hashable,
    lens
  default-language:
    Haskell2010
  default-extensions:
    NoImplicitPrelude
    StrictData
    PatternSynonyms
    RecordWildCards
    ViewPatterns
    PolyKinds
    TypeApplications
    TypeOperators
    TypeFamilies
    GADTs
    FunctionalDependencies
    ScopedTypeVariables
    RankNTypes

executable satt-composit
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base,
    classy-prelude,
    satt-composition
  default-language:    Haskell2010
  default-extensions:
    NoImplicitPrelude
    TypeFamilies
    GADTs

test-suite lint
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Hlint.hs
  build-depends:
    base,
    hlint
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite spec-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
    Data.Tree.RankedTree.ZipperSpec
  build-depends:
    base,
    satt-composition,
    hspec,
    QuickCheck
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite doc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Doctest.hs
  build-depends:
    base,
    doctest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/satt-composition
